[package]
name = "flat-blend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
cgmath = "0.18.0"
earcutr = "0.4.1"
egui = "0.21.0"
egui-miniquad = "0.14.0"
egui_demo_lib = "0.21.0"
enum-map = "2.4.2"
glam = "0.24.2"
lyon = "1.0.1"
miniquad = "0.3.16"
rand = "0.9.2"
slotmap = "1.0.7"
winit = "0.28.0"
